# DSPH-Temp

./: CHANGES.txt  README.md  chpermissions.sh
doc/help/: DualSPHysics5.0_Help.out
doc/xml_format/: CaseTemplate.xml
examples/chrono/01_Pendulum/: CaseDemolisher_Def.xml  CasePendulum_Def.xml  wCaseDemolisher_win64_CPU.bat  wCaseDemolisher_win64_GPU.bat  wCasePendulum_win64_CPU.bat  wCasePendulum_win64_GPU.bat  xCaseDemolisher_linux64_CPU.sh  xCaseDemolisher_linux64_GPU.sh  xCasePendulum_linux64_CPU.sh  xCasePendulum_linux64_GPU.sh
examples/chrono/02_Spring/: CaseBungieJump_Def.xml  CaseInitialMotionSMC_Def.xml  CaseInitialMotion_Def.xml  wCaseBungieJump_win64_CPU.bat  wCaseBungieJump_win64_GPU.bat  wCaseInitialMotionSMC_win64_CPU.bat  wCaseInitialMotionSMC_win64_GPU.bat  wCaseInitialMotion_win64_CPU.bat  wCaseInitialMotion_win64_GPU.bat  xCaseBungieJump_linux64_CPU.sh  xCaseBungieJump_linux64_GPU.sh  xCaseInitialMotionSMC_linux64_CPU.sh  xCaseInitialMotionSMC_linux64_GPU.sh  xCaseInitialMotion_linux64_CPU.sh  xCaseInitialMotion_linux64_GPU.sh
examples/chrono/03_FlexibleGate/: CaseFlexibleGate_Def.xml  wCaseFlexibleGate_win64_CPU.bat  wCaseFlexibleGate_win64_GPU.bat  xCaseFlexibleGate_linux64_CPU.sh  xCaseFlexibleGate_linux64_GPU.sh
examples/chrono/04_Pelamis/: CasePelamis_Def.xml  wCasePelamis_win64_CPU.bat  wCasePelamis_win64_GPU.bat  xCasePelamis_linux64_CPU.sh  xCasePelamis_linux64_GPU.sh
examples/chrono/05_OWSC/: CaseOWSC3D_Def.xml  wCaseOWSC3D_win64_CPU.bat  wCaseOWSC3D_win64_GPU.bat  xCaseOWSC3D_linux64_CPU.sh  xCaseOWSC3D_linux64_GPU.sh
examples/chrono/06_ZipLine/: CaseZipLine_Def.xml  wCaseZipLine_win64_CPU.bat  wCaseZipLine_win64_GPU.bat  xCaseZipLine_linux64_CPU.sh  xCaseZipLine_linux64_GPU.sh
src/VS/: DualSPHysics5Re_vs2015.VC.db
src/source/: CMakeLists.txt  Functions.cpp  Functions.h  JArraysCpu.cpp  JArraysCpu.h  JArraysGpu.cpp  JCellDivCpu.cpp  JCellDivCpu.h  JCellDivGpu.cpp  JCellDivGpu.h  JCellDivGpu_ker.cu  JCellDivGpu_ker.h  JMLPistons.h  JSph.cpp  JSph.h  JSphCpu.cpp  JSphCpu.h  JSphCpuSingle.cpp  JSphCpuSingle.h  JSphGpu.cpp  JSphGpu.h  JSphGpuSimple_ker.cu  JSphGpuSimple_ker.h  JSphGpuSingle.cpp  JSphGpu_ker.cu  JSphGpu_ker.h  main.cpp
src_extra/ToVTK_v5/source/: CMakeLists.txt  Makefile  main.cpp
(+3712 files in other folders)
